--- a/deploy/docker-compose.yml
+++ b/deploy/docker-compose.yml
@@ -13,7 +13,7 @@ services:
   # MongoDB Database
   ###########################################
 
-  db:
+  db-cancer:
     image: mongo:5
     hostname: mongo
     ports:
@@ -29,7 +29,7 @@ services:
       - my-app-network
 
 
-  mongo-express:
+  mongo-express-cancer:
     image: mongo-express
     restart: always
     ports:
@@ -45,11 +45,11 @@ services:
   # Beacon
   ###########################################
 
-  beacon:
+  beacon-cancer:
     build: ..
     image: egarchive/beacon:2.0
-    hostname: beacon
-    container_name: beacon
+    hostname: beacon-cancer
+    container_name: beacon-cancer
     volumes:
       # - ../beacon:/beacon/beacon  # inject the code, so we see the modifications "live"
       # - ../ui/static:/beacon/ui/static
@@ -72,10 +72,10 @@ services:
   # Dummy Permissions server
   ###########################################
   
-  permissions:
+  permissions-cancer:
     image: egarchive/beacon:2.0
-    hostname: beacon-permissions
-    container_name: beacon-permissions
+    hostname: beacon-permissions-cancer
+    container_name: beacon-permissions-cancer
     volumes:
       - ../permissions/:/beacon/permissions/  # inject the code, so we see the modifications "live"
       - ./logger.yml:/beacon/logger.yml
@@ -90,64 +90,9 @@ services:
     working_dir: '/beacon'
     entrypoint: ['python','-m', 'permissions']
 
-  ###########################################
-  # Local Identity Provider
-  ###########################################
-  # Keycloak is so slow to boot that the DB goes faster
-  # and we don't need a delay in-between. We can rely on the depends_on only.
-
-  idp:
-    #image: jboss/keycloak
-    image: sleighzy/keycloak
-    hostname: idp
-    container_name: idp
-    environment:
-      # - KEYCLOAK_FRONTEND_URL=http://idp:8080/auth
-      # - KEYCLOAK_LOGLEVEL=DEBUG
-      # - ROOT_LOGLEVEL=DEBUG
-      - KEYCLOAK_USER=admin
-      - KEYCLOAK_PASSWORD=secret
-      - DB_USER=admin
-      - DB_PASSWORD=secret
-      - DB_VENDOR=postgres
-      - DB_ADDR=idp-db
-      - DB_PORT=5432
-      - DB_DATABASE=keycloak
-      #- DB_SCHEMA=public
-      - KEYCLOAK_IMPORT=/tmp/beacon-realm.json -Dkeycloak.profile.feature.upload_scripts=enabled -Dkeycloak.profile.feature.token_exchange=enabled -Dkeycloak.profile.feature.admin_fine_grained_authz=enabled
-      - KEYCLOAK_HOSTNAME=localhost
-      #- KC_HOSTNAME_URL=https://beacon-network-test2.ega-archive.org
-      #- KC_HOSTNAME_ADMIN_URL=https://beacon-network-test2.ega-archive.org
-      #- KEYCLOAK_FRONTEND_URL=https://beacon-network-test2.ega-archive.org/auth/
-      #- PROXY_ADDRESS_FORWARDING=true
-    volumes:
-      - ./beacon-realm.json:/tmp/beacon-realm.json
-    ports:
-      - "8085:8080"
-      - "9991:8443"
-    networks:
-      - pub
-      - idp-priv 
-    depends_on:
-      - idp-db
-
-  idp-db:
-    image: postgres
-    hostname: idp-db
-    container_name: idp-db
-    environment:
-      - POSTGRES_DB=keycloak
-      - POSTGRES_USER=admin
-      - POSTGRES_PASSWORD=secret
-    networks:
-      - idp-priv 
-      - my-app-network
-
-
-
-  frontend2:
+  frontend-cancer:
     build:
-      context: ../frontend2
+      context: ../frontend-cancer
     command: ["node", "/opt/yarn-v1.22.19/bin/yarn.js", "start"]
     container_name: react2
     depends_on:
@@ -155,5 +100,5 @@ services:
     ports:
       - 3003:3001
     volumes:
-      - ../frontend2:/usr/src/app
+      - ../frontend-cancer:/usr/src/app
 
