--- a/deploy/docker-compose.yml
+++ b/deploy/docker-compose.yml
@@ -15,6 +15,7 @@ services:
 
   db-cancer:
     image: mongo:5
+    command: mongod --port 27018
     hostname: mongo
     ports:
       - 27018:27018
