--- a/deploy/docker-compose.yml
+++ b/deploy/docker-compose.yml
@@ -27,17 +27,17 @@ services:
       - beacon-priv
 
 
-  mongo-express-cancer:
-    image: mongo-express
-    restart: always
-    ports:
-      - 8081:8081
-    environment:
-      ME_CONFIG_MONGODB_ADMINUSERNAME: root
-      ME_CONFIG_MONGODB_ADMINPASSWORD: example
-      ME_CONFIG_MONGODB_URL: mongodb://root:example@mongo:27018/
-    networks:
-      - beacon-priv
+  #mongo-express-cancer:
+  #  image: mongo-express
+  #  restart: always
+  #  ports:
+  #    - 8081:8081
+  #  environment:
+  #    ME_CONFIG_MONGODB_ADMINUSERNAME: root
+  #    ME_CONFIG_MONGODB_ADMINPASSWORD: example
+  #    ME_CONFIG_MONGODB_URL: mongodb://root:example@mongo:27018/
+  #  networks:
+  #    - beacon-priv
 
   ###########################################
   # Beacon
