--- a/deploy/docker-compose.yml
+++ b/deploy/docker-compose.yml
@@ -90,7 +90,7 @@ services:
     build:
       context: ../frontend-cancer
     #command: ["yarn"]
-    command: ["node", "/opt/yarn-v1.22.19/bin/yarn.js", "start"]
+    command: node /opt/yarn-v1.22.19/bin/yarn.js start
     container_name: react-cancer
     ports:
       - 28744:3001
