--- a/frontend-cancer/Dockerfile
+++ b/frontend-cancer/Dockerfile
@@ -1,4 +1,4 @@
-FROM node:19.0-alpine
+FROM node:22.0-alpine
 
 # set working directory
 WORKDIR /usr/src/app
@@ -7,7 +7,6 @@ WORKDIR /usr/src/app
 ENV PATH /usr/src/app/node_modules/.bin:$PATH
 
 # install app dependencies
-COPY package.json .
-COPY yarn.lock .
+COPY . .
 
 RUN yarn install --production
