--- a/frontend-cancer/Dockerfile
+++ b/frontend-cancer/Dockerfile
@@ -1,10 +1,10 @@
 FROM node:22.0-alpine
 
 # set working directory
-WORKDIR /usr/src/app
+WORKDIR ./frontend-cancer
 
 # add _/usr/src/app/node_modules/.bin_ to $PATH
-ENV PATH /usr/src/app/node_modules/.bin:$PATH
+ENV PATH /frontend-cancer/node_modules/.bin:$PATH
 
 # install app dependencies
 COPY . .
